('GSM' is Greg Sabino Mullane, greg@turnstep.com)

1.44
	- Add SIGNATURE file for Module::Signature verification. [GSM]
	- Fix error in documentation for pg_errorlevel. 
		(CPAN bug #17434)
	- Add experimental support for using DEFAULT values inside 
		of execute with $DBDPG_DEFAULT. [GSM]
	- Return the proper SQLSTATE codes on connection failures.
		(CPAN bug #17115) [GSM]
	- Fix parser to handle leading parens. (CPAN bug #15481) [GSM]
	- Make statement handles destruction abort early if 
		InactiveDestroy is set (CPAN bug #14978) [GSM]
	- Make quote work properly for time/date types
		(CPAN bug #15082) [GSM]
	- Ensure all lo_ functions begin a transaction as needed 
		if they are the first action in a script
		(CPAN bug # 13810) [GSM]
	- Fix memory leak in dbdimp.c (k@sawada.cc) [Kenchi Sawada]
	- Fix memory leak in dbdimp.c (dmitri@karasik.eu.org)
		(CPAN bug #16054)
	- Move package declaration lines to fix RPM parser problems
		(CPAN bug #14509) [GSM]
	- Add support for dollar quoting (CPAN bug #13608) [GSM]
	- Added $dbh->{pg_default_port} method [GSM]
	- Overhaul get_info data, add many more values [GSM]
	- Overhaul type_info data (CPAN bug #13806) [GSM]
	- Rewrite some of the quoting functions, reduce dependence 
		on libpq versions [GSM]
	- Rewrite and optimize the do() method. Should be much faster 
		when called without placeholders. Thanks to Tom Lane 
		for suggesting this. [GSM]
	- Double check PQserverVersion return and use alternate 
		method if it returns 0 (CPAN bug #14302)
	- Add support for specifying type in $dbh->quote(), 
		such as $dbh->quote($var, {pg_type => DBD::Pg::PG_BYTEA})
		Also support type => SQL_xx [GSM] (CPAN bug #13942)
	- Fix pg_notifies() bug (CPAN bug #14232) [door@lcpi.ru] 
	- Add pg_ping() method [GSM]
	- Make sure ping returns true, even if in failed transaction state
		[thanks to Bill Moseley] [GSM]
	- Fix COPY-related core dump [GSM]
	- Fix strncpy bug in quote.c [Jun Kuriyama] (CPAN bug #14897)