@@ -1,6 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.44
+	- Make sure pg_warn does not warn if the database attribute
+		PrintWarn is off. (Tyler MacDonald tyler@yi.org) [GSM]
 	- Add SIGNATURE file for Module::Signature verification. [GSM]
 	- Fix error in documentation for pg_errorlevel. 
 		(CPAN bug #17434)
